force-app/main/default/objects/ampi__Disbursement__c/ampi__Disbursement__c.object-meta.xml
<CustomObject>
    <description>Financial payments made for a Project</description>
    <label>Disbursement</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>