force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Amount__c</fullName>
    <description>This currency field captures the amount of disbursement.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>