force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Conditions__c.field-meta.xml
<CustomField>
    <fullName>ampi__Conditions__c</fullName>
    <description>This text area (long) field is used to store the specified conditions for approving the disbursement</description>
    <inlineHelpText>Specify the conditions for approval of a disbursement</inlineHelpText>
    <label>Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>