force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to determine whether the current Disbursement is printed into the IATI Activity XML. If TRUE, then this record and its details are not printed into the IATI Activity XML.</description>
    <inlineHelpText>Check this box if this information should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>