force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__IATI_Aid_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aid_Type_Category__c</fullName>
    <description>Picklist field for users to narrow down the picklist options in Aid Type for IATI Activity Reporting.</description>
    <label>IATI Aid Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Aid_Type_Category</valueSetName>
    </valueSet>
</CustomField>