force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__IATI_Planned_Disbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Planned_Disbursement_Type__c</fullName>
    <description>Checkbox formula to print into the planned-disbursement/@type attribute for IATI Activity Reporting. Whether this is an original plan (prepared when the original commitment was made - checkbox is checked as TRUE) or has subsequently been revised (checkbox is unchecked as FALSE).</description>
    <formula>IF(
  AND(
    ampi__Exclude_From_IATI__c = FALSE,
    TEXT(ampi__Status__c) &lt;&gt; &quot;Paid&quot;,
    CreatedDate = LastModifiedDate
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, this Disbursement is original. If unchecked, this Disbursement has been revised.</inlineHelpText>
    <label>IATI Planned Disbursement Type</label>
    <type>Checkbox</type>
</CustomField>