force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__IATI_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Transaction_Date__c</fullName>
    <description>Date field to track date of transaction for IATI Reporting. This value is printed into the transaction/transaction-date/@iso-date in the IATI Activity XML. This date cannot be in the future.</description>
    <label>IATI Transaction Date</label>
    <type>Date</type>
</CustomField>