force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Internal_Code__c</fullName>
    <description>Text field for internal code used by org&apos;s financial management system</description>
    <label>Internal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>