force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Percent__c.field-meta.xml
<CustomField>
    <fullName>ampi__Percent__c</fullName>
    <description>[NOT IN USE]</description>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>