force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Percent_Of_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Percent_Of_Funding_Amount__c</fullName>
    <description>This formula field calculates the percent contribution of disbursement record towards the funding amount of parent project</description>
    <formula>IF(
            AND(
                NOT(ISNULL(ampi__Amount__c)) ,
                NOT(ISNULL(ampi__Project__r.ampi__Funding_Amount__c))
            ) ,
            (ampi__Amount__c / ampi__Project__r.ampi__Funding_Amount__c ),
            null
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Of Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>