force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>Master-Detail field to specify the project this disbursement belongs to.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>