force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the reporting period this disbursement belongs to</description>
    <label>Reporting Period</label>
    <referenceTo>ampi__Reporting_Period__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>