force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Scheduled_Date__c</fullName>
    <description>This field captures the date when disburment is scheduled to be made</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>