force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Status__c</fullName>
    <description>Picklist field to capture the status of disbursement</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>