force-app/main/default/objects/ampi__Disbursement__c/fields/ampi__xx_Fund__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the fund from which a disbursement is paid.</description>
    <label>Fund</label>
    <referenceTo>ampi__xx_Fund__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>