force-app/main/default/objects/ampi__Disbursement__c/fields/Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>