force-app/main/default/objects/ampi__Disbursement__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>IF(ampi__Project__c &lt;&gt; &apos;&apos;, ampi__Project__r.Project_Number_ID__c + &apos;_D&apos; + LPAD(TEXT(Order_Project__c), 2, &apos;0&apos;), &apos;&apos;)</formula>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>