force-app/main/default/objects/ampi__Disbursement__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Status__c</columns>
    <columns>ampi__Amount__c</columns>
    <columns>ampi__Percent_Of_Funding_Amount__c</columns>
    <columns>ampi__Scheduled_Date__c</columns>
    <columns>ampi__Project__c</columns>
    <columns>ampi__Reporting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>